--- a/About.html
+++ b/About.html
@@ -8,32 +8,7 @@
     <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
-    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-    <header>
-      <aside class="left-logo-mode">
-        <a href="./index.html"
-          ><img
-            src="./icons/the-logo-light-mode.svg"
-            alt="My Logo"
-            id="logoIcon"
-        /></a>
-
-        <div class="mode-with-logo">
-          <div class="mode">
-            <input type="checkbox" id="lightMode" />
-            <label for="lightMode"></label>
-          </div>
-          <p id="modeTitle" class="light-mode-text">Cool Mode</p>
-        </div>
-      </aside>
-      <ul class="nav-link">
-        <li><a href="./index.html" class="non-active">Home</a></li>
-        <li><a href="./About.html" class="active">About</a></li>
-        <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
-        <li><a href="./Contacts.html" class="non-active">Contact</a></li>
-      </ul>
-    </header>
-    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+    <div id="header-container"></div>
     <div class="about">
       <div class="main-img">
         <img
