--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
-    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-    <header>
+    <div id="header-container"></div>
+    <!--TODO:-👇👇👇-header-For-Styling-(MediaQuiry)FIXME:-👇👇👇-Start-👇👇👇-->
+    <!-- <header>
       <aside class="left-logo-mode">
         <a href="./index.html"
           ><img
@@ -31,8 +32,8 @@
         <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
         <li><a href="./Contacts.html" class="non-active">Contact</a></li>
       </ul>
-    </header>
-    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+    </header> -->
+    <!--FIXME:-☝☝☝-header-For-Styling-(MediaQuiry)TODO:-☝☝☝-end-☝☝☝-- -->
     <div class="main-content">
       <section class="content">
         <div class="hero">
