--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,34 +8,7 @@
     <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
-    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-    <header>
-      <aside class="left-logo-mode">
-        <a href="./index.html"
-          ><img
-            src="./icons/the-logo-light-mode.svg"
-            alt="My Logo"
-            id="logoIcon"
-        /></a>
-
-        <div class="mode-with-logo">
-          <div class="mode">
-            <input type="checkbox" id="lightMode" />
-            <label for="lightMode"></label>
-          </div>
-          <p id="modeTitle" class="light-mode-text">Cool Mode</p>
-        </div>
-      </aside>
-      <ul class="nav-link">
-        <li><a href="./index.html" class="non-active">Home</a></li>
-        <li><a href="./About.html" class="non-active">About</a></li>
-        <li><a href="./Portfolio.html" class="active">Portfolio</a></li>
-        <li><a href="./Contacts.html" class="non-active">Contact</a></li>
-      </ul>
-    </header>
-    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
-
-    <!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇-->
+    <div id="header-container"></div>
     <div class="main-content-parent">
       <div class="main-content-portfolio">
         <div class="content-title"><p>My Works</p></div>
@@ -55,7 +28,6 @@
             </ul>
             <a href="#"></a>
           </div>
-
           <div class="box-2">
             <ul class="hover-links">
               <li>
@@ -71,7 +43,6 @@
             </ul>
             <a href="#"></a>
           </div>
-
           <div class="box-3">
             <ul class="hover-links">
               <li>
@@ -87,7 +58,6 @@
             </ul>
             <a href="#"></a>
           </div>
-
           <div class="box-4">
             <ul class="hover-links">
               <li>
@@ -103,7 +73,6 @@
             </ul>
             <a href="#"></a>
           </div>
-
           <div class="box-5">
             <ul class="hover-links">
               <li>
@@ -119,7 +88,6 @@
             </ul>
             <a href="#"></a>
           </div>
-
           <div class="box-6">
             <ul class="hover-links">
               <li>
